--- a/Assessment_1.ipynb
+++ b/Assessment_1.ipynb
@@ -75,29 +75,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'count' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcount\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m\n\u001b[0;32m      4\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcount\u001b[39m=\u001b[39mcount\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m\n\u001b[1;32m----> 5\u001b[0m a\u001b[39m=\u001b[39mA()\n\u001b[0;32m      6\u001b[0m \u001b[39mprint\u001b[39m(a\u001b[39m.\u001b[39mcount)\n",
-      "Cell \u001b[1;32mIn[3], line 4\u001b[0m, in \u001b[0;36mA.__init__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m      3\u001b[0m   \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcount\u001b[39m=\u001b[39m\u001b[39m5\u001b[39m\n\u001b[1;32m----> 4\u001b[0m   \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcount\u001b[39m=\u001b[39mcount\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'count' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grass type pokemon name is Bulbasaur\n",
+      "Pokemon name is Charizard and type is Fire\n"
      ]
     }
    ],
    "source": [
-    "class A:\n",
-    "  def __init__(self):\n",
-    "    self.count=5\n",
-    "    self.count=count+1\n",
-    "a=A()\n",
-    "print(a.count)"
+    "class Pokemon():\n",
+    " \n",
+    "    def __init__(self, name, type):\n",
+    "        self.name = name\n",
+    "        self.type = type\n",
+    " \n",
+    "    def stringPokemon(self):\n",
+    "        print(f\"Pokemon name is {self.name} and type is {self.type}\")\n",
+    " \n",
+    "class GrassType(Pokemon):\n",
+    " \n",
+    "    # overrides the stringPokemon() function on 'Pokemon' class\n",
+    "    def stringPokemon(self):\n",
+    "        print(f\"Grass type pokemon name is {self.name}\")\n",
+    " \n",
+    "poke1 = GrassType('Bulbasaur', 'Grass')\n",
+    "poke1.stringPokemon\n",
+    "poke1.stringPokemon()\n",
+    "poke2 = Pokemon('Charizard', 'Fire')\n",
+    "poke2.stringPokemon\n",
+    "poke2.stringPokemon()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.+0.j 2.+0.j 3.+0.j]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "a = np.array([1, 2, 3], dtype = complex) \n",
+    "print (a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[200 400]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "array1=np.array([100,200,300,400,500,600,700])\n",
+    "print(array1[1:5:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ True,  True],\n",
+       "       [ True,  True]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.full((2,2), 1) == np.ones((2,2))"
    ]
   }
  ],
